--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,10 +2,7 @@
   font-family: Jost;
   src: url(../fonts/Jost.ttf);
 }
-@font-face {
-  font-family: Bungee;
-  src: url(../fonts/Bungee-Regular.ttf);
-}
+
 @font-face {
   font-family: Major-Mono;
   src: url(../fonts/MajorMonoDisplay.ttf);
@@ -47,11 +44,12 @@
   --auxiliary-color-01: #000;
   --auxiliary-color-02: #fff;
   --auxiliary-color-03: #E6E6E6;
+  --auxiliary-color-04: #B6B6B6;
+  --auxiliary-color-05: #D6D6D6;
 
   /* Font Variables */
   --primary-font: Jost, sans-serif;
   --secondary-font: Major-Mono, monospace, sans-serif;
-  --title-font: Bungee, Arial, sans-serif;
 }
 
 .App {
@@ -65,10 +63,13 @@
   box-sizing: border-box;
 }
 
+.background-fixed {
+  background: var(--auxiliary-color-01) url(../img/hero-page/hero-page-background.png) no-repeat fixed bottom center;
+  background-size: cover;
+}
+
 body {
   font-family: var(--primary-font);
-  background: var(--auxiliary-color-01) url(../img/hero-page-background.png) no-repeat fixed bottom center;
-  background-size: cover;
   color: var(--auxiliary-color-03);
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
@@ -80,4 +81,22 @@ code {
 
 .hidden {
   display: none;
+}
+
+.secondary-title {
+  width: fit-content;
+  font: normal var(--medium-spacing-02) var(--secondary-font);
+}
+
+.secondary-title hr{
+  margin-top: var(--small-spacing-02);
+  border: 0;
+  background: linear-gradient(to right, #E6E6E6 0%, #0D0D0D 35%, #0D0D0D 65%, #E6E6E6 100%);
+  height: 1px;
+}
+
+@media screen and (width < 1010px) {
+  .secondary-title {
+    font-size: var(--small-spacing-06);
+  }
 }
