--- a/src/assets/css/about-me.css
+++ b/src/assets/css/about-me.css
@@ -1,8 +1,8 @@
-@import './global.css';
+@import "./global.css";
 
 .about-me {
   width: 100%;
-  padding: 0 var(--big-spacing-02) 8% var(--big-spacing-02);
+  padding: 0 var(--large-spacing-06) 8% var(--large-spacing-06);
   text-align: center;
 }
 
@@ -12,15 +12,15 @@
 
 .about-me .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .about-me .information-container {
   background-color: var(--primary-color-dark);
   width: 40%;
   padding: var(--medium-spacing-06);
-  border: 3px solid var(--primary-color-lighter);
-  border-radius: var(--small-spacing-04);
+  border: 2px solid var(--primary-color-lighter);
+  border-radius: var(--small-spacing-03);
 }
 
 .about-me .information-container > p:nth-child(2) {
@@ -45,36 +45,58 @@
   height: var(--medium-spacing-06);
 }
 
-@media screen and (width < 1010px) {
-  .about-me {
-    padding: 12% var(--medium-spacing-02);
-  }
-
+@media screen and (width < 1235px) {
   .about-me .container {
-    flex-direction: column;
     gap: var(--small-spacing-06);
   }
 
   .about-me .information-container {
     width: 100%;
-    padding: var(--medium-spacing-04) var(--medium-spacing-02);
-    border: 2px solid var(--primary-color-lighter);
-    border-radius: var(--small-spacing-03);
+    padding: var(--medium-spacing-04) var(--medium-spacing-06);
+    /* border-radius: var(--small-spacing-03); */
   }
 
+  .about-me .information-container .info-item {
+    gap: var(--small-spacing-05);
+    font-size: var(--small-spacing-03-04);
+  }
+
+  .about-me .info-item img {
+    width: var(--medium-spacing-05);
+    height: var(--medium-spacing-05);
+  }
+}
+
+@media screen and (width < 1100px) {
   .about-me .information-container .subtitle {
     font-size: var(--small-spacing-05);
-    margin: var(--small-spacing-02) 0; 
+  }
+
+  .about-me .information-container .info-item {
+    /* gap: var(--small-spacing-04); */
+    margin-top: var(--small-spacing-06);
+  }
+}
+@media screen and (width < 805px) {
+  .about-me {
+    padding: 8% var(--small-spacing-06);
+  }
+
+  .about-me .container {
+    flex-direction: column;
+  }
+
+  .about-me .information-container {
+    padding: var(--medium-spacing-03) var(--medium-spacing-01);
   }
 
   .about-me .information-container .info-item {
     gap: var(--small-spacing-04);
-    margin-top: var(--small-spacing-04);
-    font-size: var(--small-spacing-03);
+    margin-top: var(--small-spacing-05);
   }
 
   .about-me .info-item img {
-    width: var(--medium-spacing-04);
-    height: var(--medium-spacing-04);
+    width: var(--medium-spacing-03);
+    height: var(--medium-spacing-03);
   }
 }
