--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,8 +11,9 @@
 :root {
   /* Global Spacing Variables */
   --small-spacing-01: 0.25rem;
-  --small-spacing-02: 0.50rem;
+  --small-spacing-02: 0.5rem;
   --small-spacing-03: 0.75rem;
+  --small-spacing-03-04: 0.875rem;
   --small-spacing-04: 1rem;
   --small-spacing-05: 1.25rem;
   --small-spacing-06: 1.5rem;
@@ -34,27 +35,22 @@
   --big-spacing-04: 9rem;
 
   /* Global Color Variables */
-  --primary-color: #0D0D0D;
+  --primary-color: #0d0d0d;
   --primary-color-lighter: #515151;
   --primary-color-medium: #161619;
   --primary-color-dark: #101010;
-  --secondary-color:#162B68;
-  --secondary-color-medium: #3757B7;
-  --secondary-color-lighter: #5982FC;
+  --secondary-color: #162b68;
+  --secondary-color-medium: #3757b7;
+  --secondary-color-lighter: #5982fc;
   --auxiliary-color-01: #000;
   --auxiliary-color-02: #fff;
-  --auxiliary-color-03: #E6E6E6;
-  --auxiliary-color-04: #B6B6B6;
-  --auxiliary-color-05: #D6D6D6;
+  --auxiliary-color-03: #e6e6e6;
+  --auxiliary-color-04: #b6b6b6;
+  --auxiliary-color-05: #d6d6d6;
 
   /* Font Variables */
   --primary-font: Jost, sans-serif;
   --secondary-font: Major-Mono, monospace, sans-serif;
-}
-
-.App {
-  height: 300vh;
-  /* padding: var(--medium-spacing-06) var(--large-spacing-06); */
 }
 
 * {
@@ -64,7 +60,8 @@
 }
 
 .background-fixed {
-  background: var(--auxiliary-color-01) url(../img/hero-page/hero-page-background.png) no-repeat fixed bottom center;
+  background: var(--auxiliary-color-01)
+    url(../img/hero-page/hero-page-background.png) no-repeat fixed bottom center;
   background-size: cover;
 }
 
@@ -76,7 +73,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .hidden {
@@ -88,10 +86,16 @@ code {
   font: normal var(--medium-spacing-02) var(--secondary-font);
 }
 
-.secondary-title hr{
+.secondary-title hr {
   margin-top: var(--small-spacing-02);
   border: 0;
-  background: linear-gradient(to right, #E6E6E6 0%, #0D0D0D 35%, #0D0D0D 65%, #E6E6E6 100%);
+  background: linear-gradient(
+    to right,
+    #e6e6e6 0%,
+    #0d0d0d 35%,
+    #0d0d0d 65%,
+    #e6e6e6 100%
+  );
   height: 1px;
 }
 
