finish page styles

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -68,6 +68,7 @@
 body {
   font-family: var(--primary-font);
   color: var(--auxiliary-color-03);
+  background-color: var(--primary-color);
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 }
