--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -7,6 +7,7 @@
   position: -webkit-sticky;
   top: 0;
   padding: var(--medium-spacing-04) var(--large-spacing-06);
+  z-index: 1000;
 }
 
 .global-nav {
