--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -69,8 +69,6 @@ body {
   font-family: var(--primary-font);
   color: var(--auxiliary-color-03);
   background-color: var(--primary-color);
-  /* -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
 }
 
 code {
@@ -90,7 +88,7 @@ code {
 .secondary-title hr {
   margin-top: var(--small-spacing-02);
   border: 0;
-  background: linear-gradient(
+  background-image: linear-gradient(
     to right,
     #e6e6e6 0%,
     #0d0d0d 35%,
@@ -98,6 +96,19 @@ code {
     #e6e6e6 100%
   );
   height: 1px;
+  transition: 1s;
+  animation: hrAnimation 1s forwards;
+}
+
+@keyframes hrAnimation {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 @media screen and (width < 1010px) {
