--- a/src/assets/css/about-me.css
+++ b/src/assets/css/about-me.css
@@ -2,7 +2,8 @@
 
 .about-me {
   width: 100%;
-  padding: 0 var(--large-spacing-06) 8% var(--large-spacing-06);
+  /* padding: 0 var(--large-spacing-06) 8% var(--large-spacing-06); */
+  padding: 0 var(--large-spacing-04) 8% var(--large-spacing-02);
   text-align: center;
 }
 
