--- a/src/assets/css/infopage.css
+++ b/src/assets/css/infopage.css
@@ -1,7 +1,7 @@
 @import "./global.css";
 
 .infopage {
-  padding: var(--large-spacing-06);
+  padding: var(--large-spacing-06) var(--big-spacing-02);
 }
 
 .infopage .secondary-title {
@@ -10,15 +10,24 @@
 
 .infopage .knowledge-section {
   background-color: var(--primary-color-medium);
-  padding: var(--small-spacing-04) 0;
+  padding: var(--small-spacing-04) var(--small-spacing-06);
   text-align: center;
   border-radius: var(--small-spacing-06);
   border: 1px solid var(--primary-color-lighter);
   display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  transition: 1s;
+}
+
+.infopage .knowledge-section .knowledge-inner-box {
+  width: 100%;
+  display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap;
-  row-gap: var(--medium-spacing-02);
+  gap: var(--medium-spacing-02);
+  transition: 1s;
 }
 
 .infopage .knowledge-section .knowledge-box p {
@@ -26,8 +35,18 @@
 }
 
 .infopage .knowledge-section .knowledge-box img {
-  width: 80%;
+  width: 50px;
 }
+
+.infopage .next-btn {
+  display: none;
+}
+
+.infopage .next-btn:active {
+  -webkit-tap-highlight-color: transparent; /* Desabilitar destaque ao toque */
+}
+
+/* --- */
 
 .infopage .curriculum-contactme {
   display: grid;
@@ -41,7 +60,7 @@
 }
 
 .infopage .curriculum .curriculum-img {
-  filter: blur(2px);
+  filter: brightness(0.8);
   cursor: pointer;
 }
 
@@ -58,7 +77,7 @@
 .infopage .contact-me .contact-form .text-field {
   background-color: var(--auxiliary-color-03);
   font: normal 110% Jost;
-  padding: var(--small-spacing-03);
+  padding: var(--small-spacing-03) var(--small-spacing-04);
   border: 0;
   border-radius: var(--small-spacing-04);
   resize: none;
@@ -88,7 +107,7 @@
   max-width: 35%;
   background-color: transparent;
   font: 700 110% Jost;
-  padding: var(--small-spacing-02);
+  padding: var(--small-spacing-02) 0;
   border: 1px solid var(--secondary-color);
   border-radius: var(--small-spacing-04);
   box-shadow: 0 0 4px var(--secondary-color);
@@ -152,7 +171,7 @@
   }
 
   .infopage .knowledge-section .knowledge-box img {
-    width: 60%;
+    width: 45px;
   }
 }
 
@@ -165,12 +184,48 @@
   .infopage .contact-me .contact-form {
     padding: 0 10%;
   }
+}
 
-  .infopage .knowledge-section .knowledge-box p {
-    font-size: 70%;
+@media screen and (width < 715px) {
+  .infopage .next-btn {
+    width: 8%;
+    height: 150%;
+    background-color: transparent;
+    background-image: linear-gradient(
+      to right,
+      #00000000,
+      #0000002f,
+      #00000077 50%,
+      #000000
+    );
+    border: 0;
+    position: absolute;
+    right: -0.5%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
+  .infopage .left-btn {
+    background-image: linear-gradient(
+      to left,
+      #00000000,
+      #0000002f,
+      #00000077 50%,
+      #000000
+    );
+  }
+}
+
+@media screen and (width < 390px) {
+  .infopage .knowledge-section .knowledge-inner-box {
+    gap: var(--small-spacing-05);
+  }
   .infopage .knowledge-section .knowledge-box img {
-    width: 50%;
+    width: 30px;
+  }
+  .infopage .knowledge-section .knowledge-box p {
+    font-size: 60%;
   }
 }
