--- a/src/assets/css/infopage.css
+++ b/src/assets/css/infopage.css
@@ -60,8 +60,98 @@
 }
 
 .infopage .curriculum .curriculum-img {
+  max-width: 350px;
+  border-radius: var(--small-spacing-02);
+  box-shadow: 0 0 var(--small-spacing-02) var(--secondary-color);
   filter: brightness(0.8);
   cursor: pointer;
+}
+
+.infopage .curriculum .modal {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2222;
+  user-select: none;
+}
+
+.infopage .curriculum .modal .overlay {
+  background-color: #30303080;
+  width: 100%;
+  height: 100%;
+}
+
+.infopage .curriculum .modal .content {
+  height: max-content;
+  width: max-content;
+  align-self: center;
+  justify-self: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: crosshair;
+}
+
+.infopage .curriculum .modal .content-box {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  box-shadow: 0 0 var(--small-spacing-02) var(--secondary-color);
+  filter: brightness(0.95);
+  border-radius: var(--small-spacing-02);
+}
+
+.infopage .curriculum .modal img {
+  border-radius: var(--small-spacing-02);
+}
+
+.infopage .curriculum .modal .magnify {
+  display: none;
+  width: 200px;
+  height: 200px;
+  border: 1px solid var(--auxiliary-color-01);
+  border-radius: var(--medium-spacing-06);
+  background-size: 400%;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  pointer-events: none;
+  animation: scaleUp 0.2s ease-in forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(0);
+  }
+  90% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.infopage .curriculum .modal .close-modal {
+  fill: #000;
+  padding: 10px;
+  box-shadow: 0 0 4px #fff;
+  border-radius: 100%;
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(55px) translateY(6px);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.infopage .curriculum .modal .close-modal:hover {
+  box-shadow: 0 0 4px #dd0000;
+  opacity: 0.9;
 }
 
 /* ----- CONTACT ME SECTION ----- */
